--- a/bai2.ipynb
+++ b/bai2.ipynb
@@ -31,6 +31,26 @@
     "print(\"Diện tích hình tròn là :\",S_tron)\n",
     "print(\"Diện tích phần còn lại là:\",S_con_lai)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "916ab9c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Giá trị số nguyên b bằng 2 lần số nguyên a: 24682\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Nhập số nguyên a:\"))\n",
+    "b = 2 * a\n",
+    "print(\"Giá trị số nguyên b bằng 2 lần số nguyên a:\",b)"
+   ]
   }
  ],
  "metadata": {
