--- a/bai2.ipynb
+++ b/bai2.ipynb
@@ -34,22 +34,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "916ab9c8",
+   "execution_count": null,
+   "id": "ced12e1e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Giá trị số nguyên b bằng 2 lần số nguyên a: 24682\n"
+      "S\n"
      ]
     }
    ],
    "source": [
-    "a = int(input(\"Nhập số nguyên a:\"))\n",
-    "b = 2 * a\n",
-    "print(\"Giá trị số nguyên b bằng 2 lần số nguyên a:\",b)"
+    "# Nhập một ký tự từ bàn phím\n",
+    "c = input(\"Nhập một ký tự: \")\n",
+    "\n",
+    "# Kiểm tra ký tự có tồn tại không (phòng khi người dùng bấm Enter mà không gõ gì)\n",
+    "if not c:\n",
+    "    print(\"Bạn chưa nhập ký tự nào!\")\n",
+    "else:\n",
+    "    c = c[0]  # chỉ lấy ký tự đầu tiên (phòng khi nhập nhiều hơn 1)\n",
+    "\n",
+    "    # Nếu là chữ in hoa\n",
+    "    if c.isupper():\n",
+    "        print(c.lower())  # đổi thành chữ thường\n",
+    "    # N\n"
    ]
   }
  ],
