--- a/bai1.ipynb
+++ b/bai1.ipynb
@@ -2,14 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "afd89958",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Giá trị số nguyên b bằng 2 lần số nguyên a: 1136\n"
+     ]
+    }
+   ],
    "source": [
     "a = int(input(\"Nhập số nguyên a:\"))\n",
     "b = 2 * a\n",
     "print(\"Giá trị số nguyên b bằng 2 lần số nguyên a:\",b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "90d725f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diện tích hình chữ nhât là : 152399025\n",
+      "Diện tích hình tròn là : 26307328.98\n",
+      "Diện tích phần còn lại là: 126091696.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "chieu_dai=12345\n",
+    "chieu_rong=5789\n",
+    "pi=3.14\n",
+    "r=chieu_rong / 2\n",
+    "S_hcn = chieu_dai * chieu_dai\n",
+    "S_hcn = round(S_hcn,2)\n",
+    "S_tron = pi * r * r\n",
+    "S_tron = round(S_tron,2)\n",
+    "S_con_lai = S_hcn -S_tron\n",
+    "S_con_lai = round(S_con_lai,2)\n",
+    "print(\"Diện tích hình chữ nhât là :\",S_hcn)\n",
+    "print(\"Diện tích hình tròn là :\",S_tron)\n",
+    "print(\"Diện tích phần còn lại là:\",S_con_lai)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "397a1af0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chữ cái in hoa: H\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = input(\"Nhập vào một ký tự:\")\n",
+    "if   c.isupper():#Nếu c là chữ in hoa\n",
+    "    print(\"Chữ cái thường:\",c.lower())\n",
+    "elif c.islower():#Nếu c là chữ thường\n",
+    "    print(\"Chữ cái in hoa:\",c.upper())\n",
+    "\n"
    ]
   }
  ],
