--- a/bai1.ipynb
+++ b/bai1.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "90d725f0",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "397a1af0",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chữ cái in hoa: H\n"
+      "Chữ cái in hoa: G\n"
      ]
     }
    ],
@@ -73,6 +73,28 @@
     "elif c.islower():#Nếu c là chữ thường\n",
     "    print(\"Chữ cái in hoa:\",c.upper())\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fcf7cf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A là ký tự alphabet.\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = input(\"Nhập một ký tự\")\n",
+    "if c.isalpha():\n",
+    "    print(f\"{c} là ký tự alphabet.\")\n",
+    "else :\n",
+    "    print(f\"{c} không phải là ký tự alphabet.\")"
    ]
   }
  ],
