--- a/bai1.ipynb
+++ b/bai1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "afd89958",
    "metadata": {},
    "outputs": [
@@ -15,9 +15,9 @@
     }
    ],
    "source": [
-    "a = int(input(\"Nhập số nguyên a:\"))\n",
+    "a = int(input(\"Nhập số nguyên a:\"))#nhập giá trị\n",
     "b = 2 * a\n",
-    "print(\"Giá trị số nguyên b bằng 2 lần số nguyên a:\",b)"
+    "print(\"Giá trị số nguyên b bằng 2 lần số nguyên a:\",b)#xuất giá trị"
    ]
   },
   {
@@ -91,9 +91,9 @@
    ],
    "source": [
     "c = input(\"Nhập một ký tự\")\n",
-    "if c.isalpha():\n",
+    "if c.isalpha():#nếu c là một chữ cái\n",
     "    print(f\"{c} là ký tự alphabet.\")\n",
-    "else :\n",
+    "else :#nếu c không phải chữ cái\n",
     "    print(f\"{c} không phải là ký tự alphabet.\")"
    ]
   }
