--- a/bai4.ipynb
+++ b/bai4.ipynb
@@ -3,6 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c0f67c06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0297c461",
    "metadata": {},
    "outputs": [],
@@ -22,7 +30,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
