--- a/bai5.ipynb
+++ b/bai5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "669c902b",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chữ cái thường liền trước là: a\n"
+      "Chữ cái thường liền trước là: q\n"
      ]
     }
    ],
    "source": [
-    "c = input(\"Nhập chữ cái hoa (A-Z): \")\n",
+    "c = input(\"Nhập một chữ cái hoa (A-Z): \")\n",
     "\n",
     "if 'A' <= c <= 'Z':\n",
     "    if c == 'A':\n",
-    "        print(\"'A' là trường hợp đặc biết\")#TH đặc biệt\n",
+    "        print(\"'A' là trường hợp đặc biệt\")#TH đặc biệt\n",
     "    else:\n",
     "        c_thuong = chr(ord(c.lower()) - 1)#chữ thường đứng liền trước\n",
     "        print(\"Chữ cái thường liền trước là:\", c_thuong)\n"
