--- a/tong hop bai.ipynb
+++ b/tong hop bai.ipynb
@@ -15,6 +15,7 @@
     }
    ],
    "source": [
+    "#Bai1:\n",
     "a = int(input(\"Nhập số nguyên a:\"))#nhập giá trị\n",
     "b = 2 * a\n",
     "print(\"Giá trị số nguyên b bằng 2 lần số nguyên a:\",b)#xuất giá trị"
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "90d725f0",
    "metadata": {},
    "outputs": [
@@ -37,6 +38,7 @@
     }
    ],
    "source": [
+    "#Bai2:\n",
     "chieu_dai=12345\n",
     "chieu_rong=5789\n",
     "pi=3.14\n",
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "397a1af0",
    "metadata": {},
    "outputs": [
@@ -67,6 +69,7 @@
     }
    ],
    "source": [
+    "#Bai3:\n",
     "c = input(\"Nhập vào một ký tự:\")\n",
     "if   c.isupper():#Nếu c là chữ in hoa\n",
     "    print(\"Chữ cái thường:\",c.lower())\n",
@@ -90,11 +93,38 @@
     }
    ],
    "source": [
+    "#Bai4:\n",
     "c = input(\"Nhập một ký tự\")\n",
     "if c.isalpha():#nếu c là một chữ cái\n",
     "    print(f\"{c} là ký tự alphabet.\")\n",
     "else :#nếu c không phải chữ cái\n",
     "    print(f\"{c} không phải là ký tự alphabet.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac672338",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chữ cái thường liền trước là: f\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Bai5:\n",
+    "c = input(\"Nhập một chữ cái hoa (A-Z): \")\n",
+    "\n",
+    "if 'A' <= c <= 'Z':\n",
+    "    if c == 'A':\n",
+    "        print(\"'A' là trường hợp đặc biệt\")#TH đặc biệt\n",
+    "    else:\n",
+    "        c_thuong = chr(ord(c.lower()) - 1)#chữ thường đứng liền trước\n",
+    "        print(\"Chữ cái thường liền trước là:\", c_thuong)\n"
    ]
   }
  ],
