--- a/bai4.ipynb
+++ b/bai4.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c0f67c06",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0297c461",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a là ký tự alphabet.\n"
+     ]
+    }
+   ],
    "source": [
     "c = input(\"Nhập một ký tự\")\n",
     "if c.isalpha():\n",
