--- a/bai4.ipynb
+++ b/bai4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0297c461",
    "metadata": {},
    "outputs": [
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "c = input(\"Nhập một ký tự\")\n",
+    "c = input(\"Nhập một ký tự (a-z) hoặc (A-Z)\")\n",
     "if c.isalpha():\n",
     "    print(f\"{c} là ký tự alphabet.\")\n",
     "else :\n",
