--- a/tong hop bai.ipynb
+++ b/tong hop bai.ipynb
@@ -124,7 +124,31 @@
     "        print(\"'A' là trường hợp đặc biệt\")#TH đặc biệt\n",
     "    else:\n",
     "        c_thuong = chr(ord(c.lower()) - 1)#chữ thường đứng liền trước\n",
-    "        print(\"Chữ cái thường liền trước là:\", c_thuong)\n"
+    "        print(\"Chữ cái thường liền trước là:\", c_thuong)\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a2d4e38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = float(input(\"Nhập cạnh a:\"))\n",
+    "b = float(input(\"Nhập cạnh b:\"))\n",
+    "c = float(input(\"Nhập cạnh c:\"))\n",
+    "if (a > 0 and b > 0 and c> 0) and \\\n",
+    "(a + b > c and a + c > b and b + c > a):\n",
+    "    p = (a + b + c) / 2 \n",
+    "    try:\n",
+    "        S = math.sqrt(p * (p - a) * (p - b) * (p - c))\n",
+    "        print(f\"Đây là 3 cạnh của tam giác.\")\n",
+    "        print(f\"Diện tích của tam giác là: {S:.1f}\")\n",
+    "    except ValueError:\n",
+    "        print(\"Có lỗi trong quá trình tính toán diện tích.\")\n",
+    "else:\n",
+    "    print(\"Không phải 3 cạnh của tam giác.\")\n"
    ]
   }
  ],
