--- a/bai7.ipynb
+++ b/bai7.ipynb
@@ -6,7 +6,13 @@
    "id": "651030cd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "chuoi_ky_tu = \"2,3,5,r,y,6,8,1,5.5,y,g,s,v,b,k,n,f,e,w,2,4,9\"\n",
+    "ky_tu_thu_5 = chuoi_ky_tu[5]\n",
+    "ky_tu_thu_9 = chuoi_ky_tu[8]\n",
+    "print(\"Ky tu thu 5 la:\" , ky_tu_thu_5)\n",
+    "print(\"Ky tu thu 9 la:\" , ky_tu_thu_9)"
+   ]
   }
  ],
  "metadata": {
@@ -16,7 +22,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
