--- a/tong hop bai.ipynb
+++ b/tong hop bai.ipynb
@@ -135,6 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Bài 6\n",
     "a = float(input(\"Nhập cạnh a:\"))\n",
     "b = float(input(\"Nhập cạnh b:\"))\n",
     "c = float(input(\"Nhập cạnh c:\"))\n",
@@ -149,6 +150,21 @@
     "        print(\"Có lỗi trong quá trình tính toán diện tích.\")\n",
     "else:\n",
     "    print(\"Không phải 3 cạnh của tam giác.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "391cce0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Bai 7\n",
+    "chuoi_ky_tu = \"2,3,5,r,y,6,8,1,5.5,y,g,s,v,b,k,n,f,e,w,2,4,9\"\n",
+    "ky_tu_thu_5 = chuoi_ky_tu[5]\n",
+    "ky_tu_thu_9 = chuoi_ky_tu[8]\n",
+    "print(\"Ky tu thu 5 la:\" , ky_tu_thu_5)\n",
+    "print(\"Ky tu thu 9 la:\" , ky_tu_thu_9)"
    ]
   }
  ],
