--- a/tong hop bai.ipynb
+++ b/tong hop bai.ipynb
@@ -166,6 +166,55 @@
     "print(\"Ky tu thu 5 la:\" , ky_tu_thu_5)\n",
     "print(\"Ky tu thu 9 la:\" , ky_tu_thu_9)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "866c67ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Bai8\n",
+    "def tinh_tien_truoc_vat(kwh):\n",
+    "    # các mốc và đơn giá (đồng/kWh)\n",
+    "    caps = [(50, 1984),\n",
+    "            (50, 2050),\n",
+    "            (100, 2380),\n",
+    "            (100, 2998),\n",
+    "            (100, 3350),\n",
+    "            (None, 3460)]  # None = phần còn lại\n",
+    "    remaining = kwh\n",
+    "    total = 0\n",
+    "    for cap, price in caps:\n",
+    "        if remaining <= 0:\n",
+    "            break\n",
+    "        if cap is None:\n",
+    "            used = remaining\n",
+    "        else:\n",
+    "            used = min(remaining, cap)\n",
+    "        total += used * price\n",
+    "        remaining -= used\n",
+    "    return total\n",
+    "\n",
+    "def tien_phai_tra(ten, chi_truoc, chi_nay):\n",
+    "    if chi_nay < chi_truoc:\n",
+    "        raise ValueError(\"Chỉ số tháng này phải >= chỉ số tháng trước.\")\n",
+    "    kwh = chi_nay - chi_truoc\n",
+    "    tien_truoc_vat = tinh_tien_truoc_vat(kwh)\n",
+    "    tien_co_vat = round(tien_truoc_vat * 1.08)  # làm tròn tới đơn vị đồng\n",
+    "    return f\"Ho va ten: {ten}\\nTien phai tra la: {tien_co_vat}\"\n",
+    "\n",
+    "# Ví dụ sử dụng (chép hoặc đổi giá trị theo ý bạn):\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Ví dụ 1\n",
+    "    print(tien_phai_tra(\"Pham Xuan Toai\", 1020, 1070))\n",
+    "    # Ví dụ 2\n",
+    "    print()\n",
+    "    print(tien_phai_tra(\"Nguyen Xuan Long\", 2097, 2278))\n",
+    "    # Ví dụ 3\n",
+    "    print()\n",
+    "    print(tien_phai_tra(\"Nguyen Xuan Hai\", 2000, 2586))\n"
+   ]
   }
  ],
  "metadata": {
