--- a/tong hop bai.ipynb
+++ b/tong hop bai.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "786769d3",
    "metadata": {},
    "outputs": [
@@ -288,6 +288,7 @@
     }
    ],
    "source": [
+    "#W2A3\n",
     "a = float(input('Nhap so nguyen a:'))\n",
     "b = float(input('Nhap so nguyen b:'))\n",
     "tong_hai_so_nguyen = a + b\n",
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b9a5ad0e",
    "metadata": {},
    "outputs": [
@@ -313,12 +314,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "4\n"
+      "ket qua la: 32\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "#W2A5\n",
+    "a,b = map(int,input().split())\n",
+    "a_luy_thua_b = a ** b\n",
+    "print('ket qua la:',a_luy_thua_b)"
+   ]
   }
  ],
  "metadata": {
