--- a/tong hop bai.ipynb
+++ b/tong hop bai.ipynb
@@ -324,6 +324,95 @@
     "a_luy_thua_b = a ** b\n",
     "print('ket qua la:',a_luy_thua_b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "950c0a0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gia tri A la : 512\n",
+      "Gia tri B la : 512\n"
+     ]
+    }
+   ],
+   "source": [
+    "#W2A7\n",
+    "A = ((13 ** 2) *3)+5\n",
+    "B = 13**2*3 +5\n",
+    "print('Gia tri A la :',A)\n",
+    "print('Gia tri B la :',B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb021569",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhiet do theo thang Fahrenheit la: 37.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#W2A8\n",
+    "C = int(input('Nhiet do theo thang Celcius:'))\n",
+    "F = 9/5 * C +32 #thang nhiet do F\n",
+    "F = round(F,2)\n",
+    "print('Nhiet do theo thang Fahrenheit la:',F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40172323",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tong so tien Dat phai tra là: 110268861289088.62\n"
+     ]
+    }
+   ],
+   "source": [
+    "#W2A9\n",
+    "gia_tien_dong_ho = float(input('Gia tien chiec dong ho la:'))#tien dong ho\n",
+    "thue_xuat_nhap_canh = gia_tien_dong_ho * 0.3\n",
+    "phi_VAT = gia_tien_dong_ho * 0.1\n",
+    "phi_van_chuyen_qua_nuoc_trung_gian = 10\n",
+    "tong_phi_Dat_phai_tra = gia_tien_dong_ho + thue_xuat_nhap_canh + phi_VAT + phi_van_chuyen_qua_nuoc_trung_gian\n",
+    "tong_phi_Dat_phai_tra = round(tong_phi_Dat_phai_tra,2)\n",
+    "print('Tong so tien Dat phai tra là:', tong_phi_Dat_phai_tra)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "782bdc31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#W2A10\n",
+    "input()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16a22267",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
