--- a/tong hop bai.ipynb
+++ b/tong hop bai.ipynb
@@ -397,22 +397,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "782bdc31",
+   "execution_count": 7,
+   "id": "35c7c44d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Helen , Alice and Bob.\n"
+     ]
+    }
+   ],
    "source": [
     "#W2A10\n",
-    "input()"
+    "line = input (\"Nhap ten 3 nguoi\")\n",
+    "names = line.split()\n",
+    "print (f\"{names[2]} , {names[1]} and {names[0]}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "85de1f3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "So giay lan luot là: 7200.0 va 2580.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#W2A11\n",
+    "so_gio = float(input('Nhap so gio:'))\n",
+    "so_phut = float(input('Nhap so phut:'))\n",
+    "so_giay_doi_tu_gio = so_gio * 3600\n",
+    "so_giay_doi_tu_phut = so_phut * 60\n",
+    "print('So giay lan luot là:',so_giay_doi_tu_gio , 'va',so_giay_doi_tu_phut )\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16a22267",
+   "id": "e44c9a0e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#W2A12\n"
+   ]
   }
  ],
  "metadata": {
